--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-	"name": "vite-imagetools-metadata-example",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"svelte": "^3.54.0",
-		"vite": "^4.0.0"
-	},
-	"type": "module"
+  "name": "vite-imagetools-metadata-example",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.5.0",
+    "svelte": "^3.54.0",
+    "vite": "^4.0.0",
+    "vite-imagetools": "^4.0.18"
+  },
+  "type": "module"
 }
